[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/hud.gd" id=1]

[node name="Hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="Margin" type="MarginContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 12.0
offset_top = 12.0
offset_right = 300.0
offset_bottom = 120.0

[node name="VBox" type="VBoxContainer" parent="Margin"]

[node name="LevelLabel" type="Label" parent="Margin/VBox"]
text = "Level"

[node name="MoveLabel" type="Label" parent="Margin/VBox"]
text = "Moves: 0"

[node name="SplitLabel" type="Label" parent="Margin/VBox"]
text = ""

[node name="HintLabel" type="Label" parent="Margin/VBox"]
text = "R: Reset  |  Tab: Switch Half  |  Esc: Pause"

[node name="StatusLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -120.0
offset_top = 12.0
offset_right = 120.0
offset_bottom = 40.0
horizontal_alignment = 1
text = ""
